--- a/EECIP/Views/Dashboard/Index.cshtml
+++ b/EECIP/Views/Dashboard/Index.cshtml
@@ -70,7 +70,7 @@
             <div class="panel-heading">
                 Recent Items Matching Your Interest
                 <div class="panel-tools">
-                    <a href="@Url.Action("UserProfile", "Account", new { callout="tag" })" class="btn btn-rounded btn-xs btn-info" style="background-color:rgb(25, 156, 152)"><i class="glyphicon glyphicon-cog"></i> Setup</a>
+                    <a href="@Url.Action("Subscriptions", "Account")" class="btn btn-rounded btn-xs btn-info btn-eecip" ><i class="glyphicon glyphicon-cog"></i> Subscriptions</a>
                 </div>
             </div>
             <div class="panel-body">
