--- a/EECIP/Views/Dashboard/Leaderboard.cshtml
+++ b/EECIP/Views/Dashboard/Leaderboard.cshtml
@@ -1,5 +1,4 @@
-﻿
-@model EECIP.Models.vmDashboardLeaderboard
+﻿@model EECIP.Models.vmDashboardLeaderboard
 @{
     ViewBag.Title = "Points Leaderboard";
     ViewBag.SubSubTitle = "EECIP users earn points by adding or updating project information, contributing to discussion, and keeping their agency profiles up-to-date.";
