--- a/EECIP/Views/Shared/_LeftMenu.cshtml
+++ b/EECIP/Views/Shared/_LeftMenu.cshtml
@@ -156,7 +156,11 @@
                             </li>
                         </ul>
                     </li>
-
+                    <li class="lvl3 @Html.ActivePage("Admin", "SysLog")">
+                        <a href="@Url.Action("SysLog", "Admin")">
+                            <span class="title">Logging </span>
+                        </a>
+                    </li>
 
 
                     <li class="@Html.ActivePage("Admin", "Analytics")">
