--- a/EECIP/Views/Account/UserProfile.cshtml
+++ b/EECIP/Views/Account/UserProfile.cshtml
@@ -209,7 +209,7 @@
     {
         <a class="btn btn-default" href="@Url.Action("Index", "Dashboard")">Close</a>
     }
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button id="btnSave" disabled type="submit" class="btn btn-primary">Save</button>
 
 }
 
@@ -218,9 +218,19 @@
     <script src="https://app.getchaperone.com/embed/chaperone.js"></script>
     @Scripts.Render("~/bundles/chaperone")
     @Scripts.Render("~/bundles/select2")
+    @Scripts.Render("~/bundles/areyousure")
 
     <script type="text/javascript">
         $(document).ready(function () {
+
+            //warn user if leaving unsaved page
+            $('form').areYouSure();
+            $('form').on('dirty.areYouSure', function () {
+                $("#btnSave").prop("disabled", false);
+            });
+            $('form').on('clean.areYouSure', function () {
+                $("#btnSave").prop("disabled", true);
+            });
 
             //function to initiate Select2
             $(".search-select").select2({
