--- a/EECIP/Views/Dashboard/Agency.cshtml
+++ b/EECIP/Views/Dashboard/Agency.cshtml
@@ -11,7 +11,7 @@
 {
     <div class="row">
         <div class="col-sm-12">
-            <form class="form-horizontal">
+            <div class="form-horizontal">
                 <div class="form-group">
                     <label class="col-sm-2 control-label" for="form-field-1">
                         Select Agency:
@@ -20,7 +20,7 @@
                         @Html.DropDownListFor(model => model.agency.ORG_IDX, Model.ddl_Agencies, "", new { @class = "form-control", @onchange = "document.location.href = '/Dashboard/Agency?selAgency=' + this.options[this.selectedIndex].value;" })
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 }
@@ -93,13 +93,12 @@
                     <div class="col-md-12">
                         @if (!User.IsInRole("ReadOnly"))
                         {
-                            <button type="submit" name="submitButton" value="Save" class="btn btn-primary">Save</button>
+                            <button id="btnSave" disabled type="submit" name="submitButton" value="Save" class="btn btn-primary">Save</button>
                         }
                         <a href="@Url.Action("RefAgencies", "Admin")" class="btn btn-default">Close</a>
                     </div>
                 </div>
             }
-
         </section>
     </div>
     <!-- AGENCY USERS -->
@@ -185,7 +184,7 @@
                 <div class="table-responsive">
                     <table class="table table-striped m-b-none" data-ride="datatables">
                         <tr>
-                            <th></th>
+                            <th style="min-width:70px;"></th>
                             <th>Enterprise Service</th>
                             <th>Project Name</th>
                             <th>Description</th>
@@ -351,9 +350,19 @@
     @Scripts.Render("~/bundles/chaperone")
     @Scripts.Render("~/bundles/confirmdelete")
     @Scripts.Render("~/bundles/select2")
+    @Scripts.Render("~/bundles/areyousure")
 
     <script type="text/javascript">
         $(document).ready(function () {
+
+            //warn user if leaving unsaved page
+            $('form').areYouSure();
+            $('form').on('dirty.areYouSure', function () {
+                $("#btnSave").prop("disabled", false);
+            });
+            $('form').on('clean.areYouSure', function () {
+                $("#btnSave").prop("disabled", true);
+            });
 
             //function to initiate Select2
             $(".search-select").select2({
