--- a/EECIP/Views/Shared/_LeftMenu.cshtml
+++ b/EECIP/Views/Shared/_LeftMenu.cshtml
@@ -172,6 +172,12 @@
             </li>
         }
 
+        @*<li class="lvl1 @Html.ActivePage("Dashboard", "Metrics")">
+            <a href="@Url.Action("Metrics","Dashboard")">
+                <i class="clip-airplane"></i>
+                <span class="title">Metrics</span><span class="selected"></span>
+            </a>
+        </li>*@
     </ul>
     <!-- end: MAIN NAVIGATION MENU -->
     @*@if (ViewBag.ShowTour == true)
