--- a/EECIP/Content/Site.css
+++ b/EECIP/Content/Site.css
@@ -405,6 +405,36 @@ ul.main-navigation-menu > li.active > a {
 }
 
 /**********************ENT SVC CARD STYLING *********************/
+/* flip >> card >> face / front / back  >> flipinner */
+
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    /* IE10+ specific styles go here */
+    .flip:hover .card .back {
+        transform: rotateY(0deg);
+        -webkit-transform-style: preserve-3d;
+        -webkit-transition: 0.5s;
+        transform-style: preserve-3d;
+        transition: 0.5s;
+    }
+
+    .flip:hover .card .front {
+        transform: rotateY(180deg);
+        -webkit-transform-style: preserve-3d;
+        -webkit-transition: 0.5s;
+        transform-style: preserve-3d;
+        transition: 0.5s;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        z-index: 0;
+        display: none;
+    }
+}
+
+
+.flipinner {
+    margin: 0px !important;
+}
+
 .flip {
     -webkit-perspective: 800;
     perspective: 800;
@@ -412,9 +442,9 @@ ul.main-navigation-menu > li.active > a {
     text-align: center;
 }
 
-    .flip .card.flipped {
-        -webkit-transform: rotatey(-180deg);
-        transform: rotatey(-180deg);
+    .flip .flipped {
+        -webkit-transform: rotateY(-180deg);
+        transform: rotateY(-180deg);
     }
 
     .flip .card {
@@ -443,6 +473,7 @@ ul.main-navigation-menu > li.active > a {
             -webkit-transform: translateX(-50%) translateY(-50%);
             transform: translateX(-50%) translateY(-50%);
         }
+
             .flip .card .front .hd1 {
                 font-family: Raleway,sans-serif;
                 font-weight: 400;
@@ -451,13 +482,11 @@ ul.main-navigation-menu > li.active > a {
             }
 
         .flip .card .back {
-            -webkit-transform: rotatey(-180deg);
-            transform: rotatey(-180deg);
+            -webkit-transform: rotateY(-180deg);
+            transform: rotateY(-180deg);
         }
 
-.flipinner {
-    margin: 0px !important;
-}
+
 
 
 
